2001-05-29  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (change_user_chfn): Implement. use chfn to set finger infromation.
	(add_user): use (change_user_chfn).
	(change_user): ditto.

2001-05-28  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_parse_images): Preserve leading spaces of images.
	(xst_boot_parse_global): Don't double escape quotes.
	(xst_boot_conf_edit_image): Fixed bug where XstPartitionType lines got wrong.
	(xst_boot_conf_add_image): ditto.

2001-05-25  Hans Petter Jansson  <hpj@ximian.com>

	* file.pl.in (xst_file_backup_rotate_dirs): Create the 'First' directory on
	  the first invocation, and provide a symlink to it which is rotated with
	  the other dirs. Fixes bug #2732.

2001-05-25  Arturo Espinosa Aldama  <arturo@ximian.com>

	* service.pl.in (xst_service_sysv_get_paths): Added redhat-7.1.

	* parse.pl.in (xst_parse_shell_escape): Some special chars
	are escaped when surrounded by quotes, so let's apply quotes
	if they appear, and not escape them with '\', as they may
	be latter surrounded by quotes and make the backslash appear.

	* parse.pl.in: More comment documentation.
	* replace.pl.in: same.

2001-05-25  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_conf_set_images): Reimplement.
	(xst_boot_conf_add_image): Helper function for (xst_boot_conf_set_images).
	(xst_boot_conf_edit_image): ditto.
	(xst_boot_conf_delete_image): ditto.
	(xst_boot_conf_is_image): ditto.
	(xst_boot_conf_find_image): ditto.

2001-05-25  Chema Celorio  <chema@celorio.com>

	* boot-conf.in (xml_print_global_kws): remove print. duh !
	* boot.pl.in (xst_boot_parse_global): ditto

2001-05-24  Arturo Espinosa Aldama  <arturo@ximian.com>

	* 0.5 RELEASE

2001-05-24  Arturo Espinosa Aldama  <arturo@ximian.com>

	* share.pl.in (xst_share_parse_nfs_exports): If the pattern
	for a client_info is empty, assume 0.0.0.0/0.

	* network.pl.in (xst_network_suse70_interface_activate): Fixed